# ai-model-quantisation

./: .gitignore  README.md  env-example  main.py  pyproject.toml  quantise_qwen.py  requirements.txt  run_quantised_model.py
