[project]
name = "ai-model-quantisation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.14.0",
    "optimum-quanto>=0.2.4",
    "python-dotenv>=1.2.2",
    "safetensors>=0.8.0",
    "sentencepiece>=0.2.1",
    "tokenizers>=0.22,<0.23",
    "torch>=2.2",
    "transformers>=4.44",
]
